<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNotification">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/setting"
        android:onClick="handleBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button" />

    <TextView
        android:id="@+id/notificationWindow"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="152dp"
        android:text="@string/notification_window"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notificationWindowStartInput"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="236dp"
        android:autofillHints="Start"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/notification_window_start"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationWindow" />

    <TextView
        android:id="@+id/to"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="21dp"
        android:text="@string/TO"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/notificationWindowEndInput"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/notificationWindowStartInput"
        app:layout_constraintTop_toBottomOf="@+id/notificationWindow" />

    <EditText
        android:id="@+id/notificationWindowEndInput"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="74dp"
        android:autofillHints="End"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/notification_window_end"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/notificationWindowStartInput"
        app:layout_constraintTop_toBottomOf="@+id/notificationWindow" />

    <TextView
        android:id="@+id/editNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="152dp"
        android:text="@string/edit_notifications"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notificationFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="152dp"
        android:text="@string/notification_frequency"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNotificationTitle" />

    <EditText
        android:id="@+id/notificationFrequencyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Once Every x Hours"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/once_every_x_hours"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationFrequency" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="50dp"
        android:enabled="false"
        android:onClick="handleSaveButton"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>