<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".InputInformation">

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="age"
        android:background="@drawable/rounded_white_button"
        android:ellipsize="none"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:letterSpacing="0.0892857143"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/intakeInput"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="age"
        android:background="@drawable/rounded_white_button"
        android:ellipsize="none"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/enter_your_water_intake"
        android:inputType="number"
        android:letterSpacing="0.0892857143"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <Button
        android:id="@+id/inputButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:enabled="false"
        android:onClick="handleText"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/genderButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:onClick="handleGender"
        android:text="@string/gender_male"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OR"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/intakeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderButton" />

</androidx.constraintlayout.widget.ConstraintLayout>

