<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".WaterIntake">

    <TextView
        android:id="@+id/amountToDrinkPercentage"
        android:layout_width="126dp"
        android:layout_height="53dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="143dp"
        android:elevation="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountToDrink"
        android:layout_width="126dp"
        android:layout_height="53dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="143dp"
        android:elevation="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/recommendedDailyIntake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:text="@string/recommended_daily_intake"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/WaveLoadingView"
        android:layout_width="293dp"
        android:layout_height="290dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="81dp"
        android:gravity="center"
        android:text="@string/amount_drunk"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:wlv_borderColor="@color/purple_700"
        app:wlv_waveColor="@color/purple_500" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/WaveLoadingView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <EditText
        android:id="@+id/drinkInput"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="Enter your intake"
        android:background="@drawable/rounded_white_button"
        android:ellipsize="none"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/enter_your_intake"
        android:inputType="number"
        android:letterSpacing="0.0892857143"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="309dp"
        android:layout_height="58dp"
        android:enabled="false"
        android:onClick="logIntake"
        android:text="@string/log_intake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recommendedDailyIntake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/setting"
            android:onClick="handleSettingsButton"
            app:srcCompat="@drawable/ic_setting"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/btnTimer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer"
            android:onClick="enterTimer"
            app:srcCompat="@drawable/ic_timer" />

        <ImageButton
            android:id="@+id/btnEditNotification"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/setting"
            android:onClick="handleEditNotification"
            app:srcCompat="@drawable/ic_edit_notification" />

        <ImageButton
            android:id="@+id/btnNFC"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nfc"
            android:onClick="handleNFCButton"
            app:srcCompat="@drawable/icons8_nfc_others_96" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>